Fixes the problem with "jumping" font size in the "About" tab.

--- a/src/main/resources/info/deskchan/gui_javafx/style.css
+++ b/src/main/resources/info/deskchan/gui_javafx/style.css
@@ -2,6 +2,10 @@
     -fx-font-family: "PT Sans";
 }
 
+.header {
+    -fx-font-size: 20;
+}
+
 .menu-item:hover {
      -fx-background-color: #45aac67f;
 }
